First full draft.

--- a/arguing-digital-history.tex
+++ b/arguing-digital-history.tex
@@ -40,7 +40,7 @@
 
 
 
-\title{Arguing with Digital History  }
+\title{Arguing with Digital History Position Paper  }
 
 
 
@@ -86,9 +86,9 @@
 \hypersetup{breaklinks=true,
             bookmarks=true,
             pdfauthor={Jason A. Heppler, Ph.D. (University of Nebraska at Omaha)},
-             pdfkeywords = {digital history, digital humanities, historical narrative, historical
-theory, historical argumentation},  
-            pdftitle={Arguing with Digital History},
+             pdfkeywords = {digital history, digital humanities, narrative, historical theory,
+historical argumentation},  
+            pdftitle={Arguing with Digital History Position Paper},
             colorlinks=true,
             citecolor=blue,
             urlcolor=blue,
@@ -140,8 +140,8 @@ theory, historical argumentation},
 Mason University, September 14-16, 2017.
 
 
-\vskip 8.5pt \noindent \emph{Keywords}: digital history, digital humanities, historical narrative, historical
-theory, historical argumentation \par
+\vskip 8.5pt \noindent \emph{Keywords}: digital history, digital humanities, narrative, historical theory,
+historical argumentation \par
 
     \hbox{\vrule height .2pt width 39.14pc}
 
@@ -152,38 +152,131 @@ theory, historical argumentation \par
 
 \vskip 6.5pt
 
-\noindent  Historical argumentation in digital history has fallen short, with
-projects tending to fall in the realms of digital collections or data
-visualization. Some of these projects have led to more traditional
-venues of historical writing and publishing. The \emph{Valley of the
-Shadow}, an archive of Civil War-era material detailing the experiences
-of Confederate and Union soldiders in Augusta and Franklin Counties in
-Virginia, led to the publication of ``The Differences Slavery Made'' by
-Ed Ayers and William G. Thomas, as well as Ayers' \emph{In the Presence
-of Mine Enemies: war in the Heart of America, 1859--1863}. The
-appearance of digital history projects alongside print continues:
-Richard White's \emph{Railroaded} was accompanied by a digital
-component\footnote{Richard White, \emph{Railroaded: The
-  Transcontinentals and the Making of Modern America} (New York:
-  jNorton, 2012). White's digital companion, \emph{Railroaded}, is found
-  at \url{http://railroaded.stanford.edu}.}; William G. Thomas's
-\emph{The Iron Way} likewise had a digital component, providing access
-to primary sources, data, and visualizations\footnote{William G. Thomas,
-  \emph{The Iron Way: Railroads, the Civil War, and the Making of Modern
-  America} (New Haven: Yale University Press, 2011). Thomas's digital
-  companion, \emph{Railroads and the Making of Modern America}, is at
+\noindent  First, perhaps, a loose definition of ``digital history'': I take
+digital history to mean a variety of approaches to using computational,
+visual, and informational methods in analyzing, visualizing, and
+presenting historical analysis and arguments. As I consider the ways
+that ``digital history'' can engage with argumentation, then, I assume
+particularities of digital history that rely on graphical displays
+(maps, networks), take advantage of narrative and hypertextuality,
+provide access to digitized primary sources, share historical evidence
+and data compiled for computation and visualization, and that takes the
+form of a digital scholarly website that integrates some or all of these
+aspects of research and communication. Such projects are distinct from
+efforts that define themselves as public history; while much of digital
+history can be said to be public scholarship, that does not mean they
+rise to the criteria of public history.\footnote{Jason Heppler, et al.,
+  ``Public History as Digital History as Public History,'' working
+  group, National Council on Public History Annual Meeting, Nashville,
+  Tennessee, April 2015.} Under this definition, to state it plainly,
+digital history must be explicitly \emph{digital}: that the arguments,
+visualizations, and narrative are much harder to achieve in print and,
+thus, can only exist as a digital version.
+
+Many digital history projects tend to fall into the realms of digital
+collections or data visualization. Some of these projects have led to
+more traditional venues of historical writing and publishing. The
+\emph{Valley of the Shadow}, an archive of Civil War-era material
+detailing the experiences of Confederate and Union soldiers in Augusta
+and Franklin Counties in Virginia, led to the publication of ``The
+Differences Slavery Made'' by Ed Ayers and William G. Thomas, as well as
+Ayers' \emph{In the Presence of Mine Enemies: war in the Heart of
+America, 1859--1863}. The appearance of digital history projects
+alongside print continues: Richard White's \emph{Railroaded} was
+accompanied by a digital component\footnote{Richard White,
+  \emph{Railroaded: The Transcontinentals and the Making of Modern
+  America} (New York: Norton, 2012). White's digital companion,
+  \emph{Railroaded}, is found at \url{http://railroaded.stanford.edu}.};
+William G. Thomas's \emph{The Iron Way} likewise had a digital
+component, providing access to primary sources, data, and
+visualizations\footnote{William G. Thomas, \emph{The Iron Way:
+  Railroads, the Civil War, and the Making of Modern America} (New
+  Haven: Yale University Press, 2011). Thomas's digital companion,
+  \emph{Railroads and the Making of Modern America}, is at
   \url{http://railroads.unl.edu/}.}; Karl Jacoby's \emph{Shadows at
 Dawn} relies on a digital companion to provide access to primary
 sources.\footnote{Karl Jacoby, \emph{Shadows at Dawn: An Apache Massacre
   and the Violence of History} (New York: Penguin Books, 2009). Jacoby's
   digital companion, \emph{Shadows at Dawn}, is at
-  \url{http://brown.edu/Research/Aravaipa/}.} Conspicuously, the digital
-components don't primarily exist for driving a historical thesis, nor do
-they offer much in the way of expanding on narrative elements of their
-print partners (or experiments in nonlinear hypertextual narrative).
+  \url{http://brown.edu/Research/Aravaipa/}.} Conspicuously, these
+digital components don't exist primarily for driving a historical
+thesis, nor do they offer much in the way of expanding on narrative
+elements of their print partners (or experiments in nonlinear
+hypertextual narrative). They instead hinge on providing access to a set
+of material used by the writers in the creation of their
+monographs.\footnote{The same can be said for scholarly articles. Some
+  digital projects provide digital-only whitepapers or pre-prints, such
+  as Stanford's Spatial History Project
+  \url{http://web.stanford.edu/group/spatialhistory/cgi-bin/site/pub_toc.php}.
+  Yet other digital projects stand on their own, but are frequently
+  accompanied by print publications. See, for example, the work of
+  Claire Arcenas and Caroline Winterer, \emph{The Correspondence Network
+  of Benjamin Franklin: The London Decades}
+  \url{http://republicofletters.stanford.edu/publications/franklin/}.}
 
-Few digital history projects have attempted to exist as digital-only
-publications.
+The list of digital history projects that attempt to exist as
+digital-only publications is quite short, a situation that likely
+reflects the promotion and tenure realities of the academy. Few history
+departments have attempted to devise promotion structures and guidelines
+that accommodate digital scholarship, instead continuing to value print
+(and a book, in particular) as the cornerstone of scholarly
+merit.\footnote{This is not to suggest there are no digital projects
+  that attempt to be digital-only, but few of those have been peer
+  reviewed let alone granted the imprimatur of an academic press. For
+  example, see Douglas Seefeldt, \emph{Horrible Massacre of Emigrants!!
+  The Mountain Meadows Massacre in Public Discourse}
+  \url{http://mountainmeadows.unl.edu/}; Nick Bauch, \emph{Enchanting
+  the Desert} \url{http://enchantingthedesert.com/}; Michelle Delaney
+  and Rebecca Wingo, \emph{``I Shall Be Glad To See Them'': Gertrude
+  Käsebier's ``Show Indian'' Photographs}
+  \url{http://codystudies.org/kasebier/index.html}.} This is not,
+however, a limitation of how digital history can engage with
+argumentation. Digital history is no different, in some ways, with more
+traditional approaches to history: an interpretation built upon evidence
+and that recognizes context. While digital history can change how
+argumentation might look, by being more computational, more visual, and
+rely on large-scale machine-readable sources, argumentation otherwise
+utilizes the same techniques and venues for contributing to historical
+knowledge. While these changes in digital historical argumentation
+influence the kinds of questions we can ask---after all, only a computer
+can read and find patterns in 100,000 pages of newspapers\footnote{Library
+  of Congress \emph{Chronicling America}
+  \url{http://chroniclingamerica.loc.gov/about/}}---the answers must
+still grapple with context and existing historical interpretation.
+
+Insofar, then, that any notion of ``digital history'' supposes some
+distinction from ``traditional'' history, the notion mostly comes down
+to \emph{form}. There are cases, such as \emph{Mapping the Republic of
+Letters}, where digital projects do not make historical claims. But that
+presupposes the purpose of such projects. These projects exist not to
+make arguments in and of themselves, but as \emph{aids} to research and
+new knowledge that result in publications destined for traditional
+publishing venues---and, for better or worse, where such work reaches a
+specific audience. In other words, these projects still strive for
+argumentation even though their eventual form may not be only digital.
+
+In my own work, I have pursued projects that exist as both print and
+digital with the exception of one project. The first of these projects,
+\emph{Framing Red Power: The American Indian Movement, the Trail of
+Broken Treaties, and the Politics of Media} served as a digital
+companion to my Masters thesis and contained narrative, primary sources,
+and data visualization. That project served as an aid to research, but
+also exists as a stand-alone project containing a greatly abridged
+version of the traditional thesis. My second project, still in progress,
+called \emph{``Self-sustaining and a good citizen'': William F. Cody and
+the Progressive Wild West}, stands as a digital-only publication that
+will be going up for peer review. No print version of this project will
+exist, but will be accompanied by the imprimatur of a scholarly
+authority. My third project, also in progress, is \emph{Machines in the
+Valley}, which served as a digital companion to my dissertation but is
+being expanded upon as I begin working on my book manuscript. In each of
+these cases, however, I have tried to design the projects to stand on
+their own---to engage with a scholarly literature, to narrate historical
+events, and to take advantage of computational methods to aid
+interpretation. My projects have tended to serve as
+publically-accessible digital scholarship: to provide access to
+historical sources, but also contextualize and narrate those sources
+with the hope that others may build off that work.
 
 
 \newpage
