--- a/arguing-digital-history.tex
+++ b/arguing-digital-history.tex
@@ -152,22 +152,22 @@ historical argumentation \par
 
 \vskip 6.5pt
 
-\noindent  First, perhaps, a loose definition of ``digital history'': I take
-digital history to mean a variety of approaches to using computational,
-visual, and informational methods in analyzing, visualizing, and
-presenting historical analysis and arguments. As I consider the ways
-that ``digital history'' can engage with argumentation, then, I assume
-particularities of digital history that rely on graphical displays
-(maps, networks), take advantage of narrative and hypertextuality,
-provide access to digitized primary sources, share historical evidence
-and data compiled for computation and visualization, and that takes the
-form of a digital scholarly website that integrates some or all of these
-aspects of research and communication. Such projects are distinct from
-efforts that define themselves as public history; while much of digital
-history can be said to be public scholarship, that does not mean they
-rise to the criteria of public history.\footnote{Jason Heppler, et al.,
-  ``Public History as Digital History as Public History,'' working
-  group, National Council on Public History Annual Meeting, Nashville,
+\noindent  First, a loose definition of ``digital history'': I take digital history
+to mean a variety of approaches to using computational, visual, and
+informational methods in analyzing, visualizing, and presenting
+historical analysis and arguments. As I consider the ways that ``digital
+history'' can engage with argumentation, then, I assume particularities
+of digital history that rely on graphical displays (maps, networks),
+take advantage of narrative and hypertextuality, provide access to
+digitized primary sources, share historical evidence and data compiled
+for computation and visualization, and that takes the form of a digital
+scholarly website that integrates some or all of these aspects of
+research and communication. Such projects are distinct from efforts that
+define themselves as public history; while much of digital history can
+be said to be public scholarship, that does not mean they rise to the
+criteria of public history.\footnote{Jason Heppler, et al., ``Public
+  History as Digital History as Public History,'' working group,
+  National Council on Public History Annual Meeting, Nashville,
   Tennessee, April 2015.} Under this definition, to state it plainly,
 digital history must be explicitly \emph{digital}: that the arguments,
 visualizations, and narrative are much harder to achieve in print and,
@@ -180,12 +180,15 @@ more traditional venues of historical writing and publishing. The
 detailing the experiences of Confederate and Union soldiers in Augusta
 and Franklin Counties in Virginia, led to the publication of ``The
 Differences Slavery Made'' by Ed Ayers and William G. Thomas, as well as
-Ayers' \emph{In the Presence of Mine Enemies: war in the Heart of
-America, 1859--1863}. The appearance of digital history projects
-alongside print continues: Richard White's \emph{Railroaded} was
-accompanied by a digital component\footnote{Richard White,
-  \emph{Railroaded: The Transcontinentals and the Making of Modern
-  America} (New York: Norton, 2012). White's digital companion,
+Ayers' \emph{In the Presence of Mine Enemies}.\footnote{\emph{The Valley
+  of the Shadow: Two Communities in the American Civil War}, University
+  of Virginia \url{http://valley.lib.virginia.edu/}; Edward L. Ayres,
+  \emph{In the Presence of Mine Enemies: The Civil War in the Heart of
+  America, 1859---1864} (New York: Norton, 2004).} The appearance of
+digital history projects alongside print continues: Richard White's
+\emph{Railroaded} was accompanied by a digital component\footnote{Richard
+  White, \emph{Railroaded: The Transcontinentals and the Making of
+  Modern America} (New York: Norton, 2012). White's digital companion,
   \emph{Railroaded}, is found at \url{http://railroaded.stanford.edu}.};
 William G. Thomas's \emph{The Iron Way} likewise had a digital
 component, providing access to primary sources, data, and
@@ -208,10 +211,10 @@ monographs.\footnote{The same can be said for scholarly articles. Some
   digital projects provide digital-only whitepapers or pre-prints, such
   as Stanford's Spatial History Project
   \url{http://web.stanford.edu/group/spatialhistory/cgi-bin/site/pub_toc.php}.
-  Yet other digital projects stand on their own, but are frequently
-  accompanied by print publications. See, for example, the work of
-  Claire Arcenas and Caroline Winterer, \emph{The Correspondence Network
-  of Benjamin Franklin: The London Decades}
+  Other digital projects may be accompanied by print publications that
+  appear alongside the digital. See, for example, the work of Claire
+  Arcenas and Caroline Winterer, \emph{The Correspondence Network of
+  Benjamin Franklin: The London Decades}
   \url{http://republicofletters.stanford.edu/publications/franklin/}.}
 
 The list of digital history projects that attempt to exist as
@@ -260,18 +263,24 @@ digital with the exception of one project. The first of these projects,
 \emph{Framing Red Power: The American Indian Movement, the Trail of
 Broken Treaties, and the Politics of Media} served as a digital
 companion to my Masters thesis and contained narrative, primary sources,
-and data visualization. That project served as an aid to research, but
-also exists as a stand-alone project containing a greatly abridged
-version of the traditional thesis. My second project, still in progress,
-called \emph{``Self-sustaining and a good citizen'': William F. Cody and
-the Progressive Wild West}, stands as a digital-only publication that
-will be going up for peer review. No print version of this project will
+and data visualization.\footnote{\emph{Framing Red Power: The American
+  Indian Movement, the Trail of Broken Treaties, and the Politics of
+  Media} \url{http://framingredpower.org}.} That project served as an
+aid to research, but also exists as a stand-alone project containing a
+greatly abridged version of the traditional thesis. My second project,
+still in progress, called \emph{``Self-sustaining and a good citizen'':
+William F. Cody and the Progressive Wild West}, stands as a digital-only
+publication that will be going up for peer review.\footnote{\emph{``Self-sustaining
+  and a good citizen'': William F. Cody and the Progressive Wild West}
+  \url{http://codystudies.org}.} No print version of this project will
 exist, but will be accompanied by the imprimatur of a scholarly
 authority. My third project, also in progress, is \emph{Machines in the
 Valley}, which served as a digital companion to my dissertation but is
-being expanded upon as I begin working on my book manuscript. In each of
-these cases, however, I have tried to design the projects to stand on
-their own---to engage with a scholarly literature, to narrate historical
+being expanded upon as I begin working on my book manuscript.\footnote{\emph{Machines
+  in the Valley: Growth, Conflict, and Environmental Politics in Silicon
+  Valley} \url{http://dissertation.jasonheppler.org}.} In each of these
+cases, however, I have tried to design the projects to stand on their
+own---to engage with a scholarly literature, to narrate historical
 events, and to take advantage of computational methods to aid
 interpretation. My projects have tended to serve as
 publically-accessible digital scholarship: to provide access to
